tests/backend/checkmach/fail4.output
File "fail4.ml", line 2, characters 5-12:
Error: Annotation check for noalloc failed on function camlFail4__test_HIDE_STAMP
